feature: add system permissions